# ortu

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tailwind.config.ts  update-version.mjs
.claude/: settings.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILD_AND_RELEASE.md  CODE_SIGNING_POLICY.md  CONFIGURATION.md  DEVELOPMENT.md  FAQ.md  FEATURES.md  FOUNDER_STORY.md  PRIVACY_AND_SECURITY.md  README.md  ROADMAP.md  SHORTCUTS.md  WINDOWS_CRASH_POSTMORTEM.md  macos-direct-paste-investigation.md
scripts/: install-linux-appimage.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  crypto.rs  db.rs  installer.nsh  lib.rs  main.rs
src/lib/: Toaster.svelte  filters.ts  shortcuts.ts  theme.ts  toast.ts  types.ts  updater.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/popup/: +page.svelte
src/routes/settings/: +page.svelte
