[package]
name = "Ortu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ortu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
arboard = "3.6.1"
regex = "1.12.2"
chrono = "0.4.42"
lazy_static = "1.5.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-positioner = "2.3.1"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
tokio = { version = "1", features = ["full"] }
enigo = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

